--- a/project.html
+++ b/project.html
@@ -56,11 +56,11 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <h1>Practical Machine Learning Course Project</h1>
 <div id="introduction" class="section level2">
 <h2>Introduction</h2>
-<p>The aim of this project is to use data from accelerometers on the belt, forearm, arm, and dumbell of 6 participants to predict the manner in which they did the exercise. They were asked to perform barbell lifts correctly and incorrectly in 5 different ways. More information is available<a href="http://groupware.les.inf.puc-rio.br/har">here</a>.</p>
+<p>The aim of this project is to use data from accelerometers on the belt, forearm, arm, and dumbell of 6 participants to predict the manner in which they did the exercise. They were asked to perform barbell lifts correctly and incorrectly in 5 different ways. More information is available <a href="http://groupware.les.inf.puc-rio.br/har">here</a>.</p>
 </div>
 <div id="data" class="section level2">
 <h2>Data</h2>
-<p>The training and test data sets are available through the links below : <a href="https://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv">Training Data</a> <a href="https://d396qusza40orc.cloudfront.net/predmachlearn/pml-testing.csv">Test Data</a></p>
+<p>The training and test data sets are available through the links below : <br /><br /> <a href="https://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv">Training Data</a> <br /> <a href="https://d396qusza40orc.cloudfront.net/predmachlearn/pml-testing.csv">Test Data</a></p>
 </div>
 <div id="libraries" class="section level2">
 <h2>Libraries</h2>
